// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept color prop 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  height: 4px;
  width: 100%;
}

.emotion-0::-webkit-progress-bar {
  background-color: #F2F2F7;
  border-radius: 4px;
}

.emotion-0::-webkit-progress-value {
  background-color: #E0001A;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.emotion-0::-moz-progress-bar {
  background-color: #E0001A;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

<progress
  class="emotion-0"
  max="100"
  value="40"
/>
`;

exports[`should accept style prop 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  height: 4px;
  width: 100%;
  height: 36px;
}

.emotion-0::-webkit-progress-bar {
  background-color: #F2F2F7;
  border-radius: 4px;
}

.emotion-0::-webkit-progress-value {
  background-color: #056DFF;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.emotion-0::-moz-progress-bar {
  background-color: #056DFF;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

<progress
  class="emotion-0"
  max="100"
  value="40"
/>
`;

exports[`should render correctly 1`] = `
.emotion-0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  height: 4px;
  width: 100%;
}

.emotion-0::-webkit-progress-bar {
  background-color: #F2F2F7;
  border-radius: 4px;
}

.emotion-0::-webkit-progress-value {
  background-color: #056DFF;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

.emotion-0::-moz-progress-bar {
  background-color: #056DFF;
  border-radius: 4px;
  -webkit-transition: all .3s;
  transition: all .3s;
}

<progress
  class="emotion-0"
  max="100"
  value="40"
/>
`;
